@@ -1,0 +1,7 @@
+<%= f.label has_one.permitted_attribute %>
+<%= f.collection_select(
+  has_one.permitted_attribute,
+  has_one.candidate_records,
+  :id,
+  :to_s,
+) %>
